Change some things

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='fa'>
+<html lang="fa">
 <head>
 	<meta charset='utf-8'>
 	<meta name='description' content='FoodKeys Admin Panel UI'>
@@ -122,7 +122,7 @@
 	</style>
 	<!-- / FUSE Splash Screen CSS -->
 </head>
-<body>
+<body dir="rtl">
 
 <noscript>
 	You need to enable JavaScript to run this app.
